# tamu_dc_notes

./: .readthedocs.yaml  pyproject.toml  readthedocs.yaml
docs/source/: conf.py  index.rst
docs/source/_static/reports/: dspace_test.html  fedora_tests.html  mark.html  primeros_libros_common.html  sage_0_report.html  sage_1_report.html  sage_2_report.html  sage_3_report.html  sage_4_report.html  sage_random_july10.html  sage_random_july_11.html  sage_test_july_12.html  sage_test_july_15.html  sep_26_prod.html  sept26_8am_dev.html  ucla_test_july_15.html  utk_july_11.html
docs/source/contents/: 00_about.rst  01_the_DAME_and_our_collections.rst  01a_env_scan_tech.rst  01b_env_scan_content_modelling.rst  02_initial_priorities.rst  03_strategic_vision_and_mission.rst  04_digital_collections_policy.rst  050_intermediate_files.rst  05_workflows_and_communication.rst  06_intermediate_file_asset_standards.rst  701_creating_exhibits_in_sage.rst  899_dpmt_workflows.rst  900_Appendix_1_definitions.rst  999_brainstorming.rst  999a_future_content_models.rst
docs/source/workflows/: 000_about.rst  100_saf_creation.rst  101_ingesting_with_magpie.rst  101a_after_magpie_ingest.rst  102_creating_exhibits_in_sage.rst  103_creating_exhibits_in_spotlight.rst
