[tool.poetry]
name = "towards-iiif-centered-digital-collections"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
furo = "^2024.5.6"
sphinxcontrib-mermaid = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
